# gugu-guard

./: .gitignore  Cargo.toml  README.md  README_EN.md  config.example.toml
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  main.rs  windows_service.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  health.rs  lib.rs  manager.rs  process.rs
crates/core/src/tests/: config.rs  manager.rs  process.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  assets.rs  lib.rs  metrics.rs  state.rs  ws.rs
crates/server/tests/: api.rs
web/: app.js  index.html  style.css
