[package]
name = "gugu-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gugu"
path = "src/main.rs"

[dependencies]
gugu-core = { path = "../core" }
gugu-server = { path = "../server" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }

[lints]
workspace = true
