[package]
name = "gugu-server"
version.workspace = true
edition.workspace = true

[dependencies]
gugu-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rust-embed = { workspace = true }
mime_guess = "2"
