[package]
name = "gugu-server"
version.workspace = true
edition.workspace = true

[dependencies]
gugu-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rust-embed = { workspace = true }
prometheus = { workspace = true }
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"

[lints]
workspace = true
